# claude-agentic-netbox

./: .env.example  .gitignore  CLAUDE.md  CLI_QUICKSTART.md  DOCUMENTATION_REORGANIZATION_SUMMARY.md  LICENSE  LITELLM_UPDATE.md  README.md  TROUBLESHOOTING.md  netbox_cli.py  pyproject.toml  start_server.sh  verify_fix.py
PRPs/: litellm-integration.md  netbox-chatbox.md
backend/: __init__.py  agent.py  api.py  config.py  mcp_config.py  mcp_config_debug.py  models.py  utils.py
docs/: MODEL_SELECTION.md
docs/development/: INITIAL.md  MCP_V1_IMPROVEMENTS.md  PLANNING.md  TASK.md
docs/implementation/: CLI_IMPLEMENTATION_SUMMARY.md  DEBUG_SESSION_SUMMARY.md  FRONTEND_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md
examples/: claude-agent-sdk-python.md
frontend/: .env.example  README.md  nuxt.config.ts  package-lock.json  package.json
frontend/assets/css/: main.css
frontend/components/: ChatHistory.vue  ChatInput.vue  ChatMessage.vue  ConnectionStatus.vue  ConversationItem.vue  ConversationSidebar.vue  LoadingSpinner.vue  ModelSelector.vue
frontend/composables/: useChatSocket.ts  useConversations.ts  useModelSelection.ts
frontend/pages/: index.vue
frontend/types/: chat.ts
frontend/utils/: debug.ts  formatters.ts  storage.ts
tests/: __init__.py  conftest.py  test_api.py  test_cli.py  test_config.py  test_mcp_config.py  test_mcp_v1_integration.py  test_models.py  test_utils.py
